--- a/src/views/healthCollectiveForm.ejs
+++ b/src/views/healthCollectiveForm.ejs
@@ -449,7 +449,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(collective) !== 'undefined') { %>
+                                        <% if (collective.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
                                                     <div class="col-sm-9">
@@ -755,7 +755,7 @@
                             <form id="verification-form-health-collective" action="/sistema/add-health-verification-collective" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <% if (typeof(collective) !== 'undefined') { %>
+                                        <% if (collective.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
