--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -36,9 +36,6 @@
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
     var policyNumber = <%- JSON.stringify(policy) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -122,7 +119,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -192,9 +189,6 @@
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
     var policyNumber = <%- JSON.stringify(policy) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -274,7 +268,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -326,9 +320,6 @@
 <script>
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -412,7 +403,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -482,9 +473,6 @@
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
     var policyNumber = <%- JSON.stringify(policy) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -564,7 +552,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -617,9 +605,6 @@
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
     var policyNumber = <%- JSON.stringify(policy) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -703,7 +688,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -773,9 +758,6 @@
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
     var policyNumber = <%- JSON.stringify(policy) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -855,7 +837,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -908,9 +890,6 @@
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
     var policyNumber = <%- JSON.stringify(policy) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -994,7 +973,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -1052,9 +1031,6 @@
 <script>
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -1134,7 +1110,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -1176,9 +1152,6 @@
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
     var policyNumber = <%- JSON.stringify(policy) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -1262,7 +1235,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -1320,9 +1293,6 @@
 <script>
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
-    if (policyNumber === undefined) {
-        policyNumber.numero_poliza = '';
-    }
     $.extend($.validator.messages, {
         required: "Este campo es obligatorio",
         remote: "Por favor, rellena este campo",
@@ -1402,7 +1372,7 @@
                 Swal.fire({
                     title: 'Exitoso',
                     icon: 'success',
-                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber.numero_poliza} </b>`,
+                    html: `Se ha cargado con éxito la póliza <b> ${policyNumber[0].numero_poliza} </b>`,
                     showConfirmButton: false,
                     timer: 2000
                 }).then(()=>{
@@ -2826,7 +2796,7 @@
     }   
 </script>
 
-<% if (typeof(policy) !== 'undefined') { %>
+<% if (policy.length !== 0) { %>
     <script>
         var policy = <%- JSON.stringify(policy) %>;
         function premiumCalculationDate() {
@@ -2861,9 +2831,9 @@
                 if ((numberMonthly === '') || (numberMonthly === '0')) {
                     numberMonthly = 1;
                 }
-                var premiumMonthly = policy.prima_anual_poliza / numberMonthly;
+                var premiumMonthly = policy[0].prima_anual_poliza / numberMonthly;
                 premiumMonthly = String(premiumMonthly);
-                if (policy.tipo_moneda_poliza === 'BOLÍVAR') {
+                if (policy[0].tipo_moneda_poliza === 'BOLÍVAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -2871,7 +2841,7 @@
                         prefix: 'Bs ',
                     });
                     cleave.setRawValue(premiumMonthly);
-                } else if (policy.tipo_moneda_poliza === 'DÓLAR') {
+                } else if (policy[0].tipo_moneda_poliza === 'DÓLAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -2879,7 +2849,7 @@
                         prefix: '$ ',
                     });
                     cleave.setRawValue(premiumMonthly);
-                } else if (policy.tipo_moneda_poliza === 'EUROS') {
+                } else if (policy[0].tipo_moneda_poliza === 'EUROS') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -2913,10 +2883,10 @@
                         $('#fecha_hasta_recibo').val(fecha);
                     });
                 });
-                var premiumBimonthly = policy.prima_anual_poliza / 6;
+                var premiumBimonthly = policy[0].prima_anual_poliza / 6;
                 premiumBimonthly = String(premiumBimonthly);
                 document.getElementById("numero_pago_recibo").value = 6;
-                if (policy.tipo_moneda_poliza === 'BOLÍVAR') {
+                if (policy[0].tipo_moneda_poliza === 'BOLÍVAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -2924,7 +2894,7 @@
                         prefix: 'Bs ',
                     });
                     cleave.setRawValue(premiumBimonthly);
-                } else if (policy.tipo_moneda_poliza === 'DÓLAR') {
+                } else if (policy[0].tipo_moneda_poliza === 'DÓLAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -2932,7 +2902,7 @@
                         prefix: '$ ',
                     });
                     cleave.setRawValue(premiumBimonthly);
-                } else if (policy.tipo_moneda_poliza === 'EUROS') {
+                } else if (policy[0].tipo_moneda_poliza === 'EUROS') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -2966,10 +2936,10 @@
                         $('#fecha_hasta_recibo').val(fecha);
                     });
                 });
-                var premiumQuarterly = policy.prima_anual_poliza / 4;
+                var premiumQuarterly = policy[0].prima_anual_poliza / 4;
                 premiumQuarterly = String(premiumQuarterly);
                 document.getElementById("numero_pago_recibo").value = 4;
-                if (policy.tipo_moneda_poliza === 'BOLÍVAR') {
+                if (policy[0].tipo_moneda_poliza === 'BOLÍVAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -2977,7 +2947,7 @@
                         prefix: 'Bs ',
                     });
                     cleave.setRawValue(premiumQuarterly);
-                } else if (policy.tipo_moneda_poliza === 'DÓLAR') {
+                } else if (policy[0].tipo_moneda_poliza === 'DÓLAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -2985,7 +2955,7 @@
                         prefix: '$ ',
                     });
                     cleave.setRawValue(premiumQuarterly);
-                } else if (policy.tipo_moneda_poliza === 'EUROS') {
+                } else if (policy[0].tipo_moneda_poliza === 'EUROS') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -3019,10 +2989,10 @@
                         $('#fecha_hasta_recibo').val(fecha);
                     });
                 });
-                var premiumBiannual = policy.prima_anual_poliza / 2;
+                var premiumBiannual = policy[0].prima_anual_poliza / 2;
                 premiumBiannual = String(premiumBiannual);
                 document.getElementById("numero_pago_recibo").value = 2;
-                if (policy.tipo_moneda_poliza === 'BOLÍVAR') {
+                if (policy[0].tipo_moneda_poliza === 'BOLÍVAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -3030,7 +3000,7 @@
                         prefix: 'Bs ',
                     });
                     cleave.setRawValue(premiumBiannual);
-                } else if (policy.tipo_moneda_poliza === 'DÓLAR') {
+                } else if (policy[0].tipo_moneda_poliza === 'DÓLAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -3038,7 +3008,7 @@
                         prefix: '$ ',
                     });
                     cleave.setRawValue(premiumBiannual);
-                } else if (policy.tipo_moneda_poliza === 'EUROS') {
+                } else if (policy[0].tipo_moneda_poliza === 'EUROS') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -3072,10 +3042,10 @@
                         $('#fecha_hasta_recibo').val(fecha);
                     });
                 });
-                var annualPremium = policy.prima_anual_poliza / 1;
+                var annualPremium = policy[0].prima_anual_poliza / 1;
                 annualPremium = String(annualPremium);
                 document.getElementById("numero_pago_recibo").value = 1;
-                if (policy.tipo_moneda_poliza === 'BOLÍVAR') {
+                if (policy[0].tipo_moneda_poliza === 'BOLÍVAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -3083,7 +3053,7 @@
                         prefix: 'Bs ',
                     });
                     cleave.setRawValue(annualPremium);
-                } else if (policy.tipo_moneda_poliza === 'DÓLAR') {
+                } else if (policy[0].tipo_moneda_poliza === 'DÓLAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -3091,7 +3061,7 @@
                         prefix: '$ ',
                     });
                     cleave.setRawValue(annualPremium);
-                } else if (policy.tipo_moneda_poliza === 'EUROS') {
+                } else if (policy[0].tipo_moneda_poliza === 'EUROS') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
@@ -3102,30 +3072,30 @@
                 }
             }
             if (checkboxDivision === false) {
-                if (policy.tipo_moneda_poliza === 'BOLÍVAR') {
+                if (policy[0].tipo_moneda_poliza === 'BOLÍVAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
                         delimiter: '.',
                         prefix: 'Bs ',
                     });
-                    cleave.setRawValue(String(policy.prima_anual_poliza));
-                } else if (policy.tipo_moneda_poliza === 'DÓLAR') {
+                    cleave.setRawValue(String(policy[0].prima_anual_poliza));
+                } else if (policy[0].tipo_moneda_poliza === 'DÓLAR') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
                         delimiter: '.',
                         prefix: '$ ',
                     });
-                    cleave.setRawValue(String(policy.prima_anual_poliza));
-                } else if (policy.tipo_moneda_poliza === 'EUROS') {
+                    cleave.setRawValue(String(policy[0].prima_anual_poliza));
+                } else if (policy[0].tipo_moneda_poliza === 'EUROS') {
                     let cleave = new Cleave("#monto_prima_recibo", {
                         numeral: true,
                         numeralDecimalMark: ',',
                         delimiter: '.',
                         prefix: '€ ',
                     });
-                    cleave.setRawValue(String(policy.prima_anual_poliza));
+                    cleave.setRawValue(String(policy[0].prima_anual_poliza));
                 }
                 document.getElementById("numero_pago_recibo").value = 0;
                 document.getElementById("tipo_fraccionamiento_recibo").value = '';
@@ -3139,7 +3109,7 @@
     <script>
         var policy = <%- JSON.stringify(policy) %>;
         window.onload = function() {
-            if (policy.tipo_moneda_poliza === 'BOLÍVAR') {
+            if (policy[0].tipo_moneda_poliza === 'BOLÍVAR') {
                 $('.currency_format_number').toArray().forEach(function(field) {
                     new Cleave(field, {
                         numeral: true,
@@ -3148,7 +3118,7 @@
                         prefix: 'Bs ',
                     });
                 });
-            } else if (policy.tipo_moneda_poliza === 'DÓLAR') {
+            } else if (policy[0].tipo_moneda_poliza === 'DÓLAR') {
                 $('.currency_format_number').toArray().forEach(function(field) {
                     new Cleave(field, {
                         numeral: true,
@@ -3157,7 +3127,7 @@
                         prefix: '$ ',
                     });
                 });
-            } else if (policy.tipo_moneda_poliza === 'EUROS') {
+            } else if (policy[0].tipo_moneda_poliza === 'EUROS') {
                 $('.currency_format_number').toArray().forEach(function(field) {
                     new Cleave(field, {
                         numeral: true,
