--- a/src/views/riskDiverseCollectiveForm.ejs
+++ b/src/views/riskDiverseCollectiveForm.ejs
@@ -467,7 +467,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(collective) !== 'undefined') { %>
+                                        <% if (collective.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
                                                     <div class="col-sm-9">
@@ -773,7 +773,7 @@
                             <form id="verification-form-risk-diverse" action="/sistema/add-risk-verification-collective" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <% if (typeof(collective) !== 'undefined') { %>
+                                        <% if (collective.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
