--- a/src/views/travelPolicyForm.ejs
+++ b/src/views/travelPolicyForm.ejs
@@ -446,7 +446,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (policy.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
                                                     <div class="col-sm-9">
@@ -752,7 +752,7 @@
                             <form id="verification-form-travel" action="/sistema/add-travel-verification-factor" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (policy.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
