--- a/src/views/anotherBranchPolicyForm.ejs
+++ b/src/views/anotherBranchPolicyForm.ejs
@@ -477,7 +477,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (policy.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
                                                     <div class="col-sm-9">
@@ -783,7 +783,7 @@
                             <form id="verification-form-another-branch" action="/sistema/add-another-branch-verification-factor" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (policy.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
