--- a/src/views/patrimonialPolicyForm.ejs
+++ b/src/views/patrimonialPolicyForm.ejs
@@ -476,7 +476,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (policy.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
                                                     <div class="col-sm-9">
@@ -782,7 +782,7 @@
                             <form id="verification-form-patrimonial" action="/sistema/add-patrimonial-verification-factor" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if(policy.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
