--- a/src/views/subscriptionFuneralPolicyForm.ejs
+++ b/src/views/subscriptionFuneralPolicyForm.ejs
@@ -586,7 +586,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (policy.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
                                                     <div class="col-sm-9">
