--- a/src/views/subscriptionRiskDiverseCollectiveForm.ejs
+++ b/src/views/subscriptionRiskDiverseCollectiveForm.ejs
@@ -467,7 +467,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(collective) !== 'undefined') { %>
+                                        <% if (collective.length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
                                                     <div class="col-sm-9">
